Updated system code
This the code to run the whole procedure.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+# CyberSaathi Project Dependencies
+pymongo==4.6.2
+python-dotenv==1.0.1
 requests==2.31.0
-selenium==4.18.1
-pymongo==4.6.1
-cryptography==42.0.5
-argparse==1.4.0 
+beautifulsoup4==4.12.3
+markdown==3.5.2
+argparse==1.4.0
+colorama==0.4.6
+tqdm==4.66.2
+python-dateutil==2.8.2
+ollama==0.1.7 
