--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # CyberSaathi Project Dependencies
-pymongo==4.6.2
+flask==2.3.3
+pymongo==4.5.0
 python-dotenv==1.0.1
 requests==2.31.0
 beautifulsoup4==4.12.3
@@ -8,4 +9,5 @@ argparse==1.4.0
 colorama==0.4.6
 tqdm==4.66.2
 python-dateutil==2.8.2
-ollama==0.1.7 
+ollama==0.1.7
+dnspython==2.4.2 
